# wAZERO

./: Cargo.toml  Makefile  README.md  RELEASE_TODO.md  lib.rs  rust-toolchain.toml  traits.rs
.github/workflows/: unit_tests.yml
artifacts/: wrapped_azero.contract  wrapped_azero.json  wrapped_azero.wasm
