[package]
name = "wrapped_azero"
version = "0.1.0"
authors = ["Hans <michal.handzlik@cardinals.cc>"]
edition = "2021"

[dependencies]
ink = { version = "4.3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.9", default-features = false, features = ["derive"], optional = true }

psp22 = { git = "https://github.com/Cardinal-Cryptography/PSP22.git", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22/std",
]
ink-as-dependency = []
